--- a/CoreBankingTest.API/appsettings.Development.json
+++ b/CoreBankingTest.API/appsettings.Development.json
@@ -1,8 +1,20 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        },
+        "ServiceBus": {
+            "ConnectionString": "Endpoint=sb://your-namespace.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=your-key",
+            "CustomerTopicName": "customer-events",
+            "AccountTopicName": "account-events",
+            "TransactionTopicName": "transaction-events",
+            "AccountCommandQueue": "account-commands",
+            "TransactionCommandQueue": "transaction-commands",
+            "MaxRetries": 5,
+            "RetryDelay": "00:00:05",
+            "PrefetchCount": 10,
+            "MaxConcurrentCalls": 5
+        }
     }
-  }
 }
